/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2021-03-02 15:30 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_functions.html
  * whatsnew.txt
   ! Docu updated.
  * make_hbmk.bat (New)
   ! Call simply this bat for compile with hbmk2 on Win.
  * samples/testspli.prg
  * samples/transistor.cur (New)
   ! Ticket 32: hwg_LoadCursorFromFile() port to GTK.
   ! New cur file for test and experiments.
  * source/gtk/commond.c
  * source/gtk/control.c
  * source/gtk/draw.c
  * source/gtk/drawtext.c
  * source/gtk/inter.c
  * source/gtk/menu_c.c
  * source/gtk/message.c
  * source/gtk/wprint.c
   ! Ticket 77: Warnings with GCC 10 on LINUX. 


2021-03-01 11:00 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_functions.html
   ! Updated.
   ! hwg_LoadCursor(): Full description added.
  * hwgui.hbc
   ! libhbactivex removed, out of support.
   ! Otherwise not compilable on Windows 10 with BCC.
  * include/gtk.ch
   ! 2 new defines added from recent GTK 2.
  * make_hbmk.sh
  * install.txt
   ! Shell for build with hbmk2, txt updated.
  * samples/cursor_7_16x16.cur
   ! For experiments, cursor file with reduced size 16x16.
  * samples/testspli.prg
  * source/winapi/control.c
  * samples/testspli.rc (Deleted)
   ! New function hwg_LoadCursorFromFile().
   ! BCC resource file removed, 
   ! custom cursor from files splith.cur and splitv.cur for WinAPI.
   ! Now ready for MinGW and GTK, use cursor from stock for GTK. 
   ! To be continued: custom cursor from files for GTK.
  * source/gtk/hmisc.prg
  * source/winapi/hmisc.prg
   ! New FUNCTION hwg_PI().
  * whatsnew.txt
   ! Updated.


2021-02-27 12:20 UTC+0100 Wilfried Brunken DF7BE
  * Changelog
  * doc/hwgdoc_functions.html
  * samples/helpstatic.prg
  * source/gtk/hmisc.prg
  * source/winapi/hmisc.prg
   ! Some corrections for functions