@@ -9,6 +9,17 @@
 */
 
 
+2021-03-03 09:10 UTC+0100 Wilfried Brunken DF7BE
+  * samples/testspli.prg
+  * source/gtk/drawwidg.prg
+  * source/winapi/drawwidg.prg
+  * doc/hwgdoc_functions.html
+   ! Ticket 32:
+   ! New function hwg_LoadCursorFromString() for use with
+   ! hex values for custom cursor.
+   ! Docu updated.
+
+
 2021-03-02 15:30 UTC+0100 Wilfried Brunken DF7BE
   * doc/hwgdoc_functions.html
   * whatsnew.txt
